small layout bugs fixed

--- a/_sass/partials/_about.scss
+++ b/_sass/partials/_about.scss
@@ -5,12 +5,13 @@
     font-size: 14px;
     line-height: 18px;
     margin-bottom: 2rem;
+    margin-top: 6rem;
+
 
   .upcoming-title {
         display: flex;
         justify-content: center;
         text-transform: uppercase;
-        // padding-top: 1rem;
       }
 
   @media screen and (min-width: $screen-sm-min) {
